--- a/parts/header.html
+++ b/parts/header.html
@@ -1,7 +1,20 @@
 <!-- wp:group {"tagName":"header","className":"site-header","style":{"spacing":{"padding":{"top":"var:preset|spacing|30","bottom":"var:preset|spacing|30","left":"var:preset|spacing|40","right":"var:preset|spacing|40"}}},"layout":{"type":"constrained"}} -->
-<header class="wp-block-group site-header" style="padding-top:var(--wp--preset--spacing--30);padding-right:var(--wp--preset--spacing--40);padding-bottom:var(--wp--preset--spacing--30);padding-left:var(--wp--preset--spacing--40)"><!-- wp:site-title {"textAlign":"center"} /-->
-
-    <!-- wp:site-tagline {"textAlign":"center"} /-->
-    
-    <!-- wp:navigation {"ref":2724,"icon":"menu","layout":{"type":"flex","justifyContent":"center","flexWrap":"nowrap"}} /--></header>
-    <!-- /wp:group -->
+<header class="wp-block-group site-header" style="padding-top:var(--wp--preset--spacing--30);padding-right:var(--wp--preset--spacing--40);padding-bottom:var(--wp--preset--spacing--30);padding-left:var(--wp--preset--spacing--40)"><!-- wp:group {"style":{"spacing":{"padding":{"top":"0","bottom":"0"},"margin":{"top":"var:preset|spacing|20","bottom":"var:preset|spacing|20"}}},"fontSize":"small","layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"right"}} -->
+  <div class="wp-block-group has-small-font-size" style="margin-top:var(--wp--preset--spacing--20);margin-bottom:var(--wp--preset--spacing--20);padding-top:0;padding-bottom:0"><!-- wp:html -->
+  <label class="dark-mode-toggle">
+    <input type="checkbox">
+    <span class="toggle-slider-round"></span>
+  </label>
+  <!-- /wp:html --></div>
+  <!-- /wp:group -->
+  
+  <!-- wp:group {"layout":{"type":"flex","orientation":"vertical","flexWrap":"nowrap","justifyContent":"center"}} -->
+  <div class="wp-block-group"><!-- wp:site-logo {"width":80} /-->
+  
+  <!-- wp:site-title {"textAlign":"center"} /--></div>
+  <!-- /wp:group --></header>
+  <!-- /wp:group -->
+  
+  <!-- wp:group {"layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"center"}} -->
+  <div class="wp-block-group"><!-- wp:navigation {"ref":2724,"icon":"menu","layout":{"type":"flex","justifyContent":"right","flexWrap":"nowrap"}} /--></div>
+  <!-- /wp:group -->
